<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="0dp"
    android:paddingEnd="4dp"
    >


    <TextView
        android:id="@+id/itemNameTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/recylerview_column_div"
        android:fontFamily="@font/roboto_light"
        android:padding="@dimen/recyclerview_item_padding"
        android:paddingStart="@dimen/itemSpacing"
        android:singleLine="@bool/singleLine"
        android:text="@string/itemName"
        android:textColor="@color/colorprimaryText_new"
        android:textSize="@dimen/itemColumnTVSize" />


    <TextView
        android:id="@+id/categoryNameTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/recylerview_column_div"
        android:fontFamily="@font/roboto_light"
        android:padding="@dimen/recyclerview_item_padding"
        android:paddingStart="@dimen/itemSpacing"
        android:singleLine="@bool/singleLine"
        android:text="@string/categoryName"
        android:textColor="@color/colorprimaryText_new"
        android:textSize="@dimen/itemColumnTVSize" />


    <TextView
        android:id="@+id/brandTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/recylerview_column_div"
        android:fontFamily="@font/roboto_light"
        android:padding="@dimen/recyclerview_item_padding"
        android:paddingStart="@dimen/itemSpacing"
        android:singleLine="@bool/singleLine"
        android:text="Brand"
        android:textColor="@color/colorprimaryText_new"
        android:textSize="@dimen/itemColumnTVSize" />


    <TextView
        android:id="@+id/amountTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/recylerview_column_div"
        android:fontFamily="@font/roboto_light"
        android:padding="@dimen/recyclerview_item_padding"
        android:paddingStart="@dimen/itemSpacing"
        android:singleLine="@bool/singleLine"
        android:text="@string/amount"
        android:textColor="@color/colorprimaryText_new"
        android:textSize="@dimen/itemColumnTVSize" />


    <TextView
        android:id="@+id/quantityTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/recylerview_column_div"
        android:fontFamily="@font/roboto_light"
        android:padding="@dimen/recyclerview_item_padding"
        android:paddingStart="@dimen/itemSpacing"
        android:singleLine="@bool/singleLine"
        android:text="@string/quantity"
        android:textColor="@color/colorprimaryText_new"
        android:textSize="@dimen/itemColumnTVSize" />


    <TextView
        android:id="@+id/cashFlowTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/recylerview_column_div"
        android:fontFamily="@font/roboto_light"
        android:padding="@dimen/recyclerview_item_padding"
        android:paddingStart="@dimen/itemSpacing"
        android:singleLine="@bool/singleLine"
        android:text="@string/cashFlow"
        android:textColor="@color/colorprimaryText_new"
        android:textSize="@dimen/itemColumnTVSize" />



</LinearLayout>